Quorum3/Library/Tests/Actions/Fail/InvalidActionSymbol1.quorum
action Main
    
end

action ?
    x = 1
end

